2004-07-09 Alain Magloire
	Pr reported by Alex C.
	Follow the other views lead and for multiple selection
	show the number of selections.

	* src/org/eclipse/cdt/interanal/ui/cview/CView.java
	* src/org/eclipse/cdt/interanal/ui/cview/CViewMessages.properties

2004-07-08 Hoda Amer
	Partial fix for PR 69439: content assist confusion	

2004-07-08 Bogdan Gheorghe
	Fix for 64177: [Search] Clean up Selection Search UI
	Fix for 57121: [Search] Searching when all of the "Search For" checkboxes are unchecked causes an exception
	Fix for 68249: Accessibility: Project Settings Indexer description chopped
	
	* src/org/eclipse/cdt/internal/ui/CPluginResources.properties
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefintionIds.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchPage.java
	* src/org/eclipse/cdt/internal/ui/search/NewSearchResultCollector.java
	* src/org/eclipse/cdt/internal/ui/search/actions/DeclarationsSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/SelectionSearchGroup.java
	* plugin.xml

2004-07-07 Hoda Amer
	Fix for PR 69411: Bad label: WizardNewFileCreationPage.progress
	
2004-07-06 Bogdan Gheorghe
	
	Added support for search name grouping.
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchMatch.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchResult.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	* src/org/eclipse/cdt/internal/ui/search/LevelTreeContentProvider.java
	* src/org/eclipse/cdt/internal/ui/search/NewSearchResultCollector.java
	* src/org/eclipse/cdt/ui/CSearchResultLabelProvider.java

2004-07-06 Chris Wiebe

	This patch prevents some NPEs from happening in the class browser.  I