@@ -179,6 +179,8 @@ NewClassWizardPage.warning.BaseClassNotExists=Warning: Base class does not exist
 NewClassWizardPage.operations.getProjectClasses=Looking for classes in project
 
 NewClassWizardPage.error.NotAvailableForNonCppProjects= The wizard is not available for non C++ projects.
+NewClassWizardPage.error.SelectedProjectError=Error in determining the selected project.
+NewClassWizardPage.error.DefaultSourceFolderError=Error in determining the default source folder.
 
 NewClassWizardPage.getProjectClasses.exception.title=Exception
 NewClassWizardPage.getProjectClasses.exception.message=Unexpected exception. See log for details.
