@@ -1,3 +1,6 @@
+2004-07-09 Hoda Amer
+	Fix for PR 69510 : [C++ Class Wizard] error message in C++ Class Wizard if invoke Class Wizard from existing C++ class in C/C++ Project View
+	
 2004-07-09 Alain Magloire
 	Pr reported by Alex C.
 	Follow the other views lead and for multiple selection
